Config new content

--- a/client/ui/layouts/category/Category.html
+++ b/client/ui/layouts/category/Category.html
@@ -6,7 +6,7 @@
                 <ul class="breadcrumb">
                     <li><a href={{pathFor 'HomePage'}}>Home</a>
                     </li>
-                    <li>Ladies</li>
+                    <li>Lights</li>
                 </ul>
             </div>
 
@@ -14,8 +14,8 @@
 
             <div class="col-md-9">
                 <div class="box">
-                    <h1>Ladies</h1>
-                    <p>In our Ladies department we offer wide selection of the best products we have found and carefully selected worldwide.</p>
+                    <h1>Lights</h1>
+                    <p>Variety of lights for your sweet home</p>
                 </div>
 
                 <div class="box info-bar">
@@ -55,25 +55,25 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <a href="detail.html">
-                                            <img src="images/product1.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
-                                        <a href="detail.html">
-                                            <img src="images/product1_2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <a href="detail.html" class="invisible">
-                                <img src="images/product1.jpg" alt="" class="img-responsive">
+                            <a href={{pathFor 'Detail'}} class="invisible">
+                                <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href="detail.html">Fur coat with very but very very long name</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Bling Bling</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
-                                    <a href="detail.html" class="btn btn-default">View detail</a>
+                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
                                     <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </p>
                             </div>
@@ -87,25 +87,25 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <a href="detail.html">
-                                            <img src="images/product2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/ball_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
-                                        <a href="detail.html">
-                                            <img src="images/product2_2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/ball_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <a href="detail.html" class="invisible">
-                                <img src="images/product2.jpg" alt="" class="img-responsive">
+                            <a href={{pathFor 'Detail'}} class="invisible">
+                                <img src="images/Lights/ball_bling.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href="detail.html">White Blouse Armani</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Ball Bling</a></h3>
                                 <p class="price"><del>$280</del> $143.00</p>
                                 <p class="buttons">
-                                    <a href="detail.html" class="btn btn-default">View detail</a>
+                                    <a class="btn btn-default" href={{pathFor 'Detail'}} >View detail</a>
                                     <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </p>
                             </div>
@@ -137,25 +137,25 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <a href="detail.html">
-                                            <img src="images/product3.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/chips_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
-                                        <a href="detail.html">
-                                            <img src="images/product3_2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/chips_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <a href="detail.html" class="invisible">
-                                <img src="images/product3.jpg" alt="" class="img-responsive">
+                            <a href={{pathFor 'Detail'}} class="invisible">
+                                <img src="images/Lights/chips_bling.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href="detail.html">Black Blouse Versace</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Chips Bling</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
-                                    <a href="detail.html" class="btn btn-default">View detail</a>
+                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
                                     <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </p>
 
@@ -170,25 +170,25 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <a href="detail.html">
-                                            <img src="images/product3.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/letter_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
-                                        <a href="detail.html">
-                                            <img src="images/product3_2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/letter_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <a href="detail.html" class="invisible">
-                                <img src="images/product3.jpg" alt="" class="img-responsive">
+                            <a href={{pathFor 'Detail'}} class="invisible">
+                                <img src="images/Lights/letter_bling.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href="detail.html">Black Blouse Versace</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Letter Bling</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
-                                    <a href="detail.html" class="btn btn-default">View detail</a>
+                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
                                     <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </p>
 
@@ -203,25 +203,25 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <a href="detail.html">
-                                            <img src="images/product2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/star_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
-                                        <a href="detail.html">
-                                            <img src="images/product2_2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/star_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <a href="detail.html" class="invisible">
-                                <img src="images/product2.jpg" alt="" class="img-responsive">
+                            <a href={{pathFor 'Detail'}} class="invisible">
+                                <img src="images/Lights/star_bling.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href="detail.html">White Blouse Versace</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Star Bling</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
-                                    <a href="detail.html" class="btn btn-default">View detail</a>
+                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
                                     <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </p>
 
@@ -242,25 +242,25 @@
                             <div class="flip-container">
                                 <div class="flipper">
                                     <div class="front">
-                                        <a href="detail.html">
-                                            <img src="images/product1.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/tiny_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
-                                        <a href="detail.html">
-                                            <img src="images/product1_2.jpg" alt="" class="img-responsive">
+                                        <a href={{pathFor 'Detail'}}>
+                                            <img src="images/Lights/tiny_bling.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <a href="detail.html" class="invisible">
-                                <img src="images/product1.jpg" alt="" class="img-responsive">
+                            <a href={{pathFor 'Detail'}} class="invisible">
+                                <img src="images/Lights/tiny_bling.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href="detail.html">Fur coat</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Tiny Bling</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
-                                    <a href="detail.html" class="btn btn-default">View detail</a>
+                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
                                     <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                                 </p>
 
