--- a/client/ui/layouts/detail/Detail.html
+++ b/client/ui/layouts/detail/Detail.html
@@ -6,11 +6,11 @@
                     <ul class="breadcrumb">
                         <li><a href={{pathFor 'HomePage'}}>Home</a>
                         </li>
-                        <li><a href="#">Ladies</a>
+                        <li><a href="#">Shop</a>
                         </li>
-                        <li><a href="#">Tops</a>
+                        <li><a href="#">Lights</a>
                         </li>
-                        <li>White Blouse Armani</li>
+                        <li>Bling Bling</li>
                     </ul>
                 </div>
 
@@ -21,7 +21,7 @@
                     <div class="row" id="productMain">
                         <div class="col-sm-6">
                             <div id="mainImage">
-                                <img src="images/detailbig1.jpg" alt="" class="img-responsive">
+                                <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                             </div>
 
                             <div class="ribbon sale">
@@ -54,18 +54,18 @@
 
                             <div class="row" id="thumbs">
                                 <div class="col-xs-4">
-                                    <a href="images/detailbig1.jpg" class="thumb">
-                                        <img src="images/detailsquare.jpg" alt="" class="img-responsive">
+                                    <a href="images/Lights/bling_bling.jpg" class="thumb">
+                                        <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="col-xs-4">
-                                    <a href="images/detailbig2.jpg" class="thumb">
-                                        <img src="images/detailsquare2.jpg" alt="" class="img-responsive">
+                                    <a href="images/Lights/bling_bling.jpg" class="thumb">
+                                        <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                                     </a>
                                 </div>
                                 <div class="col-xs-4">
-                                    <a href="images/detailbig3.jpg" class="thumb">
-                                        <img src="images/detailsquare3.jpg" alt="" class="img-responsive">
+                                    <a href="images/Lights/bling_bling.jpg" class="thumb">
+                                        <img src="images/Lights/bling_bling.jpg" alt="" class="img-responsive">
                                     </a>
                                 </div>
                             </div>
@@ -77,20 +77,20 @@
                     <div class="box" id="details">
 
                         <h4>Product details</h4>
-                        <p>White lace top, woven, has a round neck, short sleeves, has knitted lining attached</p>
+                        <p>bling bling 6m - đường kính bóng 1,6cm Dây đèn với ánh sáng vàng nắng tạo cảm giác ấm áp và sang trọng thích hợp dùng để trang trí mọi hoàn cảnh.</p>
                         <h4>Material & care</h4>
                         <ul>
-                            <li>Polyester</li>
-                            <li>Machine wash</li>
+                            <li>Nhựa</li>
+                            <li>Sử dụng điện 220v</li>
                         </ul>
                         <h4>Size & Fit</h4>
                         <ul>
-                            <li>Regular fit</li>
-                            <li>The model (height 5'8" and chest 33") is wearing a size S</li>
+                            <li>Kích thước: Dây dài 6m – 40 bóng đèn có đường kính mỗi bóng 1,6cm.</li>
+                            <li>Màu sắc: Ánh sáng ấm áp màu vàng nắng, dây màu đen.</li>
                         </ul>
 
                         <blockquote>
-                            <p><em>Define style this season with Armani's new range of trendy tops, crafted with intricate details. Create a chic statement look by teaming this lace number with skinny jeans and pumps.</em>
+                            <p><em>Thắp sáng căn phòng của bạn bằng ánh sáng vàng ấm áp</em>
                             </p>
                         </blockquote>
 
@@ -119,21 +119,21 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <a href="#">
-                                                <img src="images/product2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/ball_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                         <div class="back">
                                             <a href="#">
-                                                <img src="images/product2_2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/ball_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <a href="#" class="invisible">
-                                    <img src="images/product2.jpg" alt="" class="img-responsive">
+                                    <img src="images/Lights/ball_bling.jpg" alt="" class="img-responsive">
                                 </a>
                                 <div class="text">
-                                    <h3>Fur coat</h3>
+                                    <h3>Ball Bling</h3>
                                     <p class="price">$143</p>
                                 </div>
                             </div>
@@ -146,21 +146,21 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <a href="#">
-                                                <img src="images/product1.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/chips_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                         <div class="back">
                                             <a href="#">
-                                                <img src="images/product1_2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/chips_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <a href="#" class="invisible">
-                                    <img src="images/product1.jpg" alt="" class="img-responsive">
+                                    <img src="images/Lights/chips_bling.jpg" alt="" class="img-responsive">
                                 </a>
                                 <div class="text">
-                                    <h3>Fur coat</h3>
+                                    <h3>Chips Bling</h3>
                                     <p class="price">$143</p>
                                 </div>
                             </div>
@@ -174,21 +174,21 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <a href="#">
-                                                <img src="images/product3.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/tiny_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                         <div class="back">
                                             <a href="#">
-                                                <img src="images/product3_2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/tiny_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <a href="#" class="invisible">
-                                    <img src="images/product3.jpg" alt="" class="img-responsive">
+                                    <img src="images/Lights/tiny_bling.jpg" alt="" class="img-responsive">
                                 </a>
                                 <div class="text">
-                                    <h3>Fur coat</h3>
+                                    <h3>Tiny Bling</h3>
                                     <p class="price">$143</p>
 
                                 </div>
@@ -212,21 +212,21 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <a href="#">
-                                                <img src="images/product2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/star_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                         <div class="back">
                                             <a href="#">
-                                                <img src="images/product2_2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/star_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <a href="#" class="invisible">
-                                    <img src="images/product2.jpg" alt="" class="img-responsive">
+                                    <img src="images/Lights/star_bling.jpg" alt="" class="img-responsive">
                                 </a>
                                 <div class="text">
-                                    <h3>Fur coat</h3>
+                                    <h3>Star Bling</h3>
                                     <p class="price">$143</p>
                                 </div>
                             </div>
@@ -239,49 +239,21 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <a href="#">
-                                                <img src="images/product1.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/letter_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                         <div class="back">
                                             <a href="#">
-                                                <img src="images/product1_2.jpg" alt="" class="img-responsive">
+                                                <img src="images/Lights/letter_bling.jpg" alt="" class="img-responsive">
                                             </a>
                                         </div>
                                     </div>
                                 </div>
                                 <a href="#" class="invisible">
-                                    <img src="images/product1.jpg" alt="" class="img-responsive">
+                                    <img src="images/Lights/letter_bling.jpg" alt="" class="img-responsive">
                                 </a>
                                 <div class="text">
-                                    <h3>Fur coat</h3>
-                                    <p class="price">$143</p>
-                                </div>
-                            </div>
-                            <!-- /.product -->
-                        </div>
-
-
-                        <div class="col-md-3 col-sm-6">
-                            <div class="product same-height">
-                                <div class="flip-container">
-                                    <div class="flipper">
-                                        <div class="front">
-                                            <a href="#">
-                                                <img src="images/product3.jpg" alt="" class="img-responsive">
-                                            </a>
-                                        </div>
-                                        <div class="back">
-                                            <a href="#">
-                                                <img src="images/product3_2.jpg" alt="" class="img-responsive">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <a href="#" class="invisible">
-                                    <img src="images/product3.jpg" alt="" class="img-responsive">
-                                </a>
-                                <div class="text">
-                                    <h3>Fur coat</h3>
+                                    <h3>Letter Bling</h3>
                                     <p class="price">$143</p>
                                 </div>
                             </div>
