--- a/client/ui/layouts/partials/Footer.html
+++ b/client/ui/layouts/partials/Footer.html
@@ -12,7 +12,7 @@
                             </li>
                             <li><a href="faq.html">FAQ</a>
                             </li>
-                            <li><a href="contact.html">Contact us</a>
+                            <li><a href={{pathFor 'Contact'}}>Contact us</a>
                             </li>
                         </ul>
 
@@ -23,7 +23,7 @@
                         <ul>
                             <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
                             </li>
-                            <li><a href="register.html">Regiter</a>
+                            <li><a href={{pathFor 'Register'}}>Regiter</a>
                             </li>
                         </ul>
 
@@ -36,26 +36,14 @@
 
                         <h4>Top categories</h4>
 
-                        <h5>Men</h5>
-
                         <ul>
-                            <li><a href="category.html">T-shirts</a>
+                            <li><a href={{pathFor 'Category'}}><h5>Decoration</h5></a>
                             </li>
-                            <li><a href="category.html">Shirts</a>
+                            <li><a href={{pathFor 'Category'}}><h5>Lights</h5></a>
                             </li>
-                            <li><a href="category.html">Accessories</a>
+                            <li><a href={{pathFor 'Category'}}><h5>Notebooks</h5></a>
                             </li>
-                        </ul>
-
-                        <h5>Ladies</h5>
-                        <ul>
-                            <li><a href="category.html">T-shirts</a>
-                            </li>
-                            <li><a href="category.html">Skirts</a>
-                            </li>
-                            <li><a href="category.html">Pants</a>
-                            </li>
-                            <li><a href="category.html">Accessories</a>
+                            <li><a href={{pathFor 'Category'}}><h5>Something More</h5></a>
                             </li>
                         </ul>
 
@@ -75,7 +63,7 @@
                             <br>
                         </p>
 
-                        <a href="contact.html">Go to contact page</a>
+                        <a href={{pathFor 'Contact'}}>Go to contact page</a>
 
                         <hr class="hidden-md hidden-lg">
 
