--- a/client/ui/layouts/partials/Header.html
+++ b/client/ui/layouts/partials/Header.html
@@ -30,14 +30,14 @@
                         <li class="active"><a href={{pathFor 'HomePage'}}>Home</a>
                         </li>
                         <li class="dropdown yamm-fw">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Men <b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Shop <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <div class="yamm-content">
                                         <div class="row">
                                             <div class="col-sm-3">
-                                                <h5>Clothing</h5>
-                                                <ul>
+                                                <h5>Decoration</h5>
+                                                <!--<ul>
                                                     <li><a href="#">T-shirts</a>
                                                     </li>
                                                     <li><a href="#">Shirts</a>
@@ -46,11 +46,11 @@
                                                     </li>
                                                     <li><a href="#">Accessories</a>
                                                     </li>
-                                                </ul>
+                                                </ul>-->
                                             </div>
                                             <div class="col-sm-3">
-                                                <h5>Shoes</h5>
-                                                <ul>
+                                                <h5>Lights</h5>
+                                                <!--<ul>
                                                     <li><a href="#">Trainers</a>
                                                     </li>
                                                     <li><a href="#">Sandals</a>
@@ -59,11 +59,11 @@
                                                     </li>
                                                     <li><a href="#">Casual</a>
                                                     </li>
-                                                </ul>
+                                                </ul>-->
                                             </div>
                                             <div class="col-sm-3">
-                                                <h5>Accessories</h5>
-                                                <ul>
+                                                <h5>Notebooks</h5>
+                                                <!--<ul>
                                                     <li><a href="#">Trainers</a>
                                                     </li>
                                                     <li><a href="#">Sandals</a>
@@ -76,11 +76,11 @@
                                                     </li>
                                                     <li><a href="#">Casual</a>
                                                     </li>
-                                                </ul>
+                                                </ul>-->
                                             </div>
                                             <div class="col-sm-3">
-                                                <h5>Featured</h5>
-                                                <ul>
+                                                <h5>More</h5>
+                                                <!--<ul>
                                                     <li><a href="#">Trainers</a>
                                                     </li>
                                                     <li><a href="#">Sandals</a>
@@ -96,7 +96,7 @@
                                                     </li>
                                                     <li><a href="#">Hiking shoes</a>
                                                     </li>
-                                                </ul>
+                                                </ul>-->
                                             </div>
                                         </div>
                                     </div>
@@ -105,7 +105,7 @@
                             </ul>
                         </li>
 
-                        <li class="dropdown yamm-fw">
+                        <!--<li class="dropdown yamm-fw">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Ladies <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>
@@ -177,10 +177,9 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- /.yamm-content -->
                                 </li>
                             </ul>
-                        </li>
+                        </li>-->
 
                         <li class="dropdown yamm-fw">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Template <b class="caret"></b></a>
