--- a/client/ui/layouts/checkout4/checkout4.html
+++ b/client/ui/layouts/checkout4/checkout4.html
@@ -42,10 +42,10 @@
                                     <tr>
                                         <td>
                                             <a href="#">
-                                                <img src="images/detailsquare.jpg" alt="White Blouse Armani">
+                                                <img src="images/Decor/gia_treo_3.jpg" alt="Gia treo 3">
                                             </a>
                                         </td>
-                                        <td><a href="#">White Blouse Armani</a>
+                                        <td><a href="#">Giá Treo 3</a>
                                         </td>
                                         <td>2</td>
                                         <td>$123.00</td>
@@ -55,10 +55,10 @@
                                     <tr>
                                         <td>
                                             <a href="#">
-                                                <img src="images/basketsquare.jpg" alt="Black Blouse Armani">
+                                                <img src="images/Lights/letter_bling.jpg" alt="Letter Bling">
                                             </a>
                                         </td>
-                                        <td><a href="#">Black Blouse Armani</a>
+                                        <td><a href="#">Letter Bling</a>
                                         </td>
                                         <td>1</td>
                                         <td>$200.00</td>
