--- a/client/ui/layouts/wishlist/Wishlist.html
+++ b/client/ui/layouts/wishlist/Wishlist.html
@@ -34,21 +34,21 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product1.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/khung_om.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product1_2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/khung_om.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product1.jpg" alt="" class="img-responsive">
+                                <img src="images/Decor/khung_om.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>Fur coat with very but very very long name</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Khung ốm</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
                                     <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
@@ -66,21 +66,21 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/khung_khong_lo.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product2_2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/khung_khong_lo.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product2.jpg" alt="" class="img-responsive">
+                                <img src="images/Decor/khung_khong_lo.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>White Blouse Armani</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Khung Khổng Lồ</a></h3>
                                 <p class="price"><del>$280</del> $143.00</p>
                                 <p class="buttons">
                                     <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
@@ -116,21 +116,21 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product3.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/ke_go.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product3_2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/ke_go.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product3.jpg" alt="" class="img-responsive">
+                                <img src="images/Decor/ke_go.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>Black Blouse Versace</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Kệ Gỗ</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
                                     <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
@@ -149,21 +149,21 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product3.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/bang_ghim_40_60_cm.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product3_2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/bang_ghim_40_60_cm.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product3.jpg" alt="" class="img-responsive">
+                                <img src="images/Decor/bang_ghim_40_60_cm.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>Black Blouse Versace</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Bảng Ghim 40x60cm</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
                                     <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
@@ -182,21 +182,21 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/flower_flag.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product2_2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/flower_flag.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product2.jpg" alt="" class="img-responsive">
+                                <img src="images/Decor/flower_flag.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>White Blouse Versace</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Flower Flag</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
                                     <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
@@ -221,21 +221,21 @@
                                 <div class="flipper">
                                     <div class="front">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product1.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/bang_2_mat.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                     <div class="back">
                                         <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product1_2.jpg" alt="" class="img-responsive">
+                                            <img src="images/Decor/bang_2_mat.jpg" alt="" class="img-responsive">
                                         </a>
                                     </div>
                                 </div>
                             </div>
                             <a class="invisible" href={{pathFor 'Detail'}}>
-                                <img src="images/product1.jpg" alt="" class="img-responsive">
+                                <img src="images/Decor/bang_2_mat.jpg" alt="" class="img-responsive">
                             </a>
                             <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>Fur coat</a></h3>
+                                <h3><a href={{pathFor 'Detail'}}>Bảng 2 mặt</a></h3>
                                 <p class="price">$143.00</p>
                                 <p class="buttons">
                                     <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
@@ -255,89 +255,6 @@
                         <!-- /.product -->
                     </div>
                     <!-- /.col-md-4 -->
-
-                    <div class="col-md-3 col-sm-4">
-                        <div class="product">
-                            <div class="flip-container">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product2.jpg" alt="" class="img-responsive">
-                                        </a>
-                                    </div>
-                                    <div class="back">
-                                        <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product2_2.jpg" alt="" class="img-responsive">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product2.jpg" alt="" class="img-responsive">
-                            </a>
-                            <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>White Blouse Armani</a></h3>
-                                <p class="price"><del>$280</del> $143.00</p>
-                                <p class="buttons">
-                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
-                                    <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                </p>
-                            </div>
-                            <!-- /.text -->
-
-                            <div class="ribbon sale">
-                                <div class="theribbon">SALE</div>
-                                <div class="ribbon-background"></div>
-                            </div>
-                            <!-- /.ribbon -->
-
-                            <div class="ribbon new">
-                                <div class="theribbon">NEW</div>
-                                <div class="ribbon-background"></div>
-                            </div>
-                            <!-- /.ribbon -->
-
-                            <div class="ribbon gift">
-                                <div class="theribbon">GIFT</div>
-                                <div class="ribbon-background"></div>
-                            </div>
-                            <!-- /.ribbon -->
-                        </div>
-                        <!-- /.product -->
-                    </div>
-
-                    <div class="col-md-3 col-sm-4">
-                        <div class="product">
-                            <div class="flip-container">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product3.jpg" alt="" class="img-responsive">
-                                        </a>
-                                    </div>
-                                    <div class="back">
-                                        <a href={{pathFor 'Detail'}}>
-                                            <img src="images/product3_2.jpg" alt="" class="img-responsive">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <a href={{pathFor 'Detail'}} class="invisible">
-                                <img src="images/product3.jpg" alt="" class="img-responsive">
-                            </a>
-                            <div class="text">
-                                <h3><a href={{pathFor 'Detail'}}>Black Blouse Versace</a></h3>
-                                <p class="price">$143.00</p>
-                                <p class="buttons">
-                                    <a class="btn btn-default" href={{pathFor 'Detail'}}>View detail</a>
-                                    <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                                </p>
-
-                            </div>
-                            <!-- /.text -->
-                        </div>
-                        <!-- /.product -->
-                    </div>
 
                 </div>
                 <!-- /.products -->
